fixed header z-index

--- a/src/index.css
+++ b/src/index.css
@@ -731,4 +731,5 @@ table a {
 .header-img {
   position: fixed;
   top: 0px;
+  z-index: 99;
 }
